#42 Added support for LIKE predicate (#43)
* #42 Added support for LIKE predicate

Co-authored-by: Muhammet Orazov <m.orazow@gmail.com>